2.21 (0000-00-00)
Modules:
- LEXT (new): Olympus LEXT 4000OLS data import.


2.20 (2010-06-30)
Application:
- Translations updated: French, Russian.
- It is possible to export 3D as image also to other support pixmap formats,
  the format is determined by the extension.

Libraries:
- libgwyprocess: Deserialization of spectra when there are selected curves
  actually works now.
- libgwyprocess: gwy_data_field_fit_poly() and gwy_data_field_area_fit_poly()
  work without coeffs array preinitialized to zeroes.
- libgwyprocess: Radial PSDF calculation uses all necessary DFT coefficients,
  correcting the calculation for anisotropic images.
- libgwydgets: GwyColorAxis can show numbered ticks.

Modules:
- GSF (new): Gwyddion Simple Field single-channel file reading and exporting.
- SICM: Value scale was corrected and some more metadata fields are read now.
- Facet level: Bugs when masking was used were fixed, namely in Exclude mode.
- 1D FFT Filter, Color Range tool: square root of the density is shown on
  graphs to visualize smaller peaks better.
- Nanonis: Files with multi-line comments can be imported, metadata support
  was added.
- Omicron: Metadata values are imported from parameter files.
- Quesant: Null file part offsets are ignored in the header, fixing import of
  some files.
- NT-MDT: Z value offsets are honoured in imported data.
- Shimadzu: Bogus warning that Z offset units differ from Z scale units was
  fixed.
- Nanoscope: Some import support for I-V spectra was added.
- JPK: Support for 32bit data was added.
- Pixmap export: False color scale ticks are numbered.
- Rotate: Rotation angle can be a fractional number.


2.19 (2009-12-11)
Application:
- Translations updated: Czech, French, Russian.
- Not starting a new instance of Gwyddion with --remote-new on X11 when none
  is running (affecting most desktop launchers and menus) was fixed.
- Thumbnails in recent file menu are shown even if menu icons are globally
  disabled in Gtk+.

Libraries: